[package]
name = "sqlite_wasm_reader"
version = "0.4.2"
edition = "2024"
authors = ["Thomas Q <thomasqsa@gmail.com>", "Ramanan Ravikumar <ramanan@deepfence.io>"]
description = "A pure Rust SQLite reader library for WASI environments"
repository = "https://github.com/thmasq/sqlite-wasm-reader"
license = "Apache-2.0"
keywords = ["sqlite", "wasm", "wasi", "database", "reader"]
categories = ["database", "wasm", "parser-implementations"]
readme = "README.md"

[dependencies]
byteorder = "1.5.0"
sqlparser = { version = "0.60.0", default-features = false }
thiserror = "2.0.17"
lru = "0.16.2"

[dev-dependencies]
rusqlite = "0.38.0"
wasmtime = "40.0.0"
wasmtime-wasi = "40.0.0"
env_logger = "0.11.8"

[lib]
name = "sqlite_wasm_reader"
path = "src/lib.rs"
